aggiunta titolo, paragrafo e liste

--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailwind</title>
-</head>
-<body>
+    <title>Tailwind</title>   
     <link href="./src/output.css" rel="stylesheet">
+</head>
+
+<body>
+   
+ 
 </body>
+<title>QUESTO E' UN TITOLO</title>
 <h1 class="text-center bg-blue-500 p-4"> HELLO WORD!</h1>
+<h2 class="text-xl font-bold text-center">Lorem ipsum</h2>
+<p class="italic ">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+<ul class="font-bold text-blue-600 hover:text-red-600 transition duration-300 text-center list-disc" >
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+</ul>
+
 </html>
