--- a/index.html
+++ b/index.html
@@ -4,24 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailwind</title>   
+    <title>Tailwind</title>
     <link href="./src/output.css" rel="stylesheet">
 </head>
 
 <body>
-   
- 
-</body>
-<title>QUESTO E' UN TITOLO</title>
+    <div class="container mx-auto p-6">
 <h1 class="text-center bg-blue-500 p-4"> HELLO WORD!</h1>
 <h2 class="text-xl font-bold text-center">Lorem ipsum</h2>
 <p class="italic ">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-<ul class="font-bold text-blue-600 hover:text-red-600 transition duration-300 text-center list-disc" >
+<ul class=" list-inside font-bold text-blue-600 hover:text-red-600 transition duration-300 text-center list-disc">
     <li>1</li>
     <li>2</li>
     <li>3</li>
     <li>4</li>
     <li>5</li>
 </ul>
+<ol class="list-decimal list-inside space-y-2 text-lg text-red-700 p-4">
+    <li>Pomodoro</li>
+    <li>Basilico</li>
+    <li>Mozzarella</li>
+    <li>Olio</li>
+</ol>
+</div>
+</body>
+
+
 
 </html>
