--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind</title>
     <link href="./src/output.css" rel="stylesheet">
+<!--:root {
+    --color-brand: #082f49;
+} ---->
 </head>
 
 <body>
     <div class="container mx-auto p-6">
 <h1 class="text-center bg-blue-500 p-4"> HELLO WORD!</h1>
 <h2 class="text-xl font-bold text-center">Lorem ipsum</h2>
+<h3 class="bg-brand  text-pink-700 p-4">lorem ipsum</h3>
 <p class="italic ">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
 <ul class=" list-inside font-bold text-blue-600 hover:text-red-600 transition duration-300 text-center list-disc">
     <li>1</li>
