--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <link href="./src/output.css" rel="stylesheet">
 <!--:root {
     --color-brand: #082f49;
-} ---->
+    --spacing-72: 18rem;
+  --spacing-84: 21rem;
+  --spacing-96: 24rem;
+}
+
+.p-72 { padding: var(--spacing-72); }
+.p-84 { padding: var(--spacing-84); }
+.p-96 { padding: var(--spacing-96); }
+
+.m-72 { margin: var(--spacing-72); }
+.m-84 { margin: var(--spacing-84); }
+.m-96 { margin: var(--spacing-96); }
+}
+ ---->
 </head>
 
 <body>
@@ -31,7 +44,11 @@
     <li>Olio</li>
 </ol>
 </div>
-</body>
+<!--DIFFERENZA CON I VALORI SETTATI-->
+
+  <h1 class="p-72 m-72 bg-blue-500">HELLO WORD!</h1>
+
+</div>
 
 
 
