--- a/hover.html
+++ b/hover.html
@@ -43,6 +43,10 @@
         <h3 class="group-hover:text-red-500">Title</h3>
         <p class="group-hover:text-gray-800">Description</p>
     </a>
+<!--hover focus activate-->
+<button class="bg-amber-400 hover:bg-amber-950 focus:outline-2 focus:outline-offset-2 focus:outline-black active:bg-amber-600 transition-colors duration-200">
+  Salva modifiche
+</button>
 
 </body>
 </html>
