--- a/hover.html
+++ b/hover.html
@@ -44,6 +44,7 @@
         <p class="group-hover:text-gray-800">Description</p>
     </a>
 <!--hover focus activate-->
+ <h2 class="text-2xl font-semibold mt-8">Hover focus active</h2>
 <button class="bg-amber-400 hover:bg-amber-950 focus:outline-2 focus:outline-offset-2 focus:outline-black active:bg-amber-600 transition-colors duration-200">
   Salva modifiche
 </button>
