ho aggiunto align e justify

--- a/flex.html
+++ b/flex.html
@@ -42,5 +42,42 @@
     <div class= " bg-lime-900 text-white p-6 rounded-xl shadow-lg">box 2</div>
     <div class=  " bg-lime-900 text-white p-6 rounded-xl shadow-lg">box 3</div>
     </div>
+    <!--justify-center-->
+    <h1 class="text-3xl font-extrabold text-red-950 text-center">JUSTIFY-CENTER</h1>
+    <p class="underline italic text-amber-600 text-center">utilizzare le utilità justify-center o 
+        justify-center-safe per giustificare gli elementi 
+    lungo il centro dell'asse principale del contenitore:
+    </p>
+    <!--caso justify center-->
+    <div class="flex justify-center text-white gap-8 p-8">
+        <div class=" bg-yellow-950 text-white p-6 rounded-xl shadow-lg">box 1</div>
+    <div class= "  bg-yellow-950 text-white p-6 rounded-xl shadow-lg">box 2</div>
+    <div class=  "  bg-yellow-950 text-white p-6 rounded-xl shadow-lg">box 3</div>
+    </div>
+    <!--caso  justify-center-safe-->
+    <p>Quando non c'è abbastanza spazio disponibile, l' justify-center-safe allineerà 
+        gli elementi all'inizio del contenitore anziché al centro.</p>
+    <div class="flex justify-center-safe text-white gap-8 p-8">
+        <div class="bg-indigo-900 text-white p-6 rounded-xl shadow-lg">box 1 safe</div>
+    <div class= " bg-indigo-900  text-white p-6 rounded-xl shadow-lg">box 2 safe</div>
+    <div class=  " bg-indigo-900 text-white p-6 rounded-xl shadow-lg">box 3 safe</div>
+    </div>
+    <!--item-center-->
+   <h1 class="text-3xl font-extrabold text-red-950 text-center">ITEMS CENTER</h1>
+    <p class="underline italic text-amber-600 text-center">serve per per allineare gli elementi 
+        lungo il centro dell'asse trasversale del contenitore 
+    </p>
+ <div class="flex justify-center items-center gap-8 p-8 ">
+  <div class="bg-orange-700 text-white p-6 rounded-xl shadow-lg">
+    box 1 safe
+  </div>
+  <div class="bg-orange-700 text-white p-6 rounded-xl shadow-lg">
+    box 2 safe
+  </div>
+  <div class="bg-orange-700 text-white p-6 rounded-xl shadow-lg">
+    box 3 safe
+  </div>
+</div>
+
 </body>
 </html>
