--- a/flex.html
+++ b/flex.html
@@ -78,6 +78,16 @@
     box 3 safe
   </div>
 </div>
+  <!--flex wrap-->
+  <h1 class="text-3xl font-extrabold text-red-950 text-center">FLEX WRAP</h1>
+    <p class="underline italic text-amber-600 text-center">serve per consentire agli elementi flessibili di avvolgersi:
+<div class="flex flex-wrap gap-4">
+  <div class="bg-teal-700 text-white p-6 w-1/3">1</div>
+  <div class="bg-teal-700 text-white p-6 w-1/3">2</div>
+  <div class="bg-teal-700 text-white p-6 w-1/3">3</div>
+  <div class="bg-teal-700 text-white p-6 w-1/3">4</div>
+  <div class="bg-teal-700 text-white p-6 w-1/3">5</div>
+</div>
 
 </body>
 </html>
