--- a/flex.html
+++ b/flex.html
@@ -69,13 +69,13 @@
     </p>
  <div class="flex justify-center items-center gap-8 p-8 ">
   <div class="bg-orange-700 text-white p-6 rounded-xl shadow-lg">
-    box 1 safe
+    box 1 
   </div>
   <div class="bg-orange-700 text-white p-6 rounded-xl shadow-lg">
-    box 2 safe
+    box 2 
   </div>
   <div class="bg-orange-700 text-white p-6 rounded-xl shadow-lg">
-    box 3 safe
+    box 3 
   </div>
 </div>
   <!--flex wrap-->
